--- a/main.css
+++ b/main.css
@@ -9,6 +9,10 @@
   font-size: 80px;
 }
 
+.hi{
+  background: transparent;
+}
+
 .clouds{
   background: url(Weather-Icons-clouds.png) no-repeat center center fixed ;
   background-size: cover;
